--- a/assets/i18n/en-US.json
+++ b/assets/i18n/en-US.json
@@ -17,6 +17,10 @@
     "CT": "Training Cruiser (CT)",
     "AV": "Seaplane Tender (AV)"
   },
+  "RequiredTime": {
+    "hour": "%s hr",
+    "minute": "%s min"
+  },
   "IncomeExplain": {
     "basicIncome": "Basic Income",
     "aveImp": "Daihatsu-class Ave. Improvement",
