--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -4,7 +4,7 @@
   "AutoTooltip": "根據遊戲內動作自動切換艦隊",
 
   "Cost": "消耗",
-  "GS": "大成功",
+  "Great Success": "大成功",
   "CondNormal": "常規檢查",
   "CondGreatSuccess": "大成功檢查",
   "CondNotReady": "未通過",
