--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -2,6 +2,7 @@
   "EZ Exped": "イージー遠征",
   "Auto": "Auto",
   "AutoTooltip": "Switching between fleets automatically depending on your in-game actions.",
+  "CustomRecommendSparkledCount": "Custom the number of sparkled ships for a better Great Success rate",
   "CondNormal": "Normal",
   "CondGreatSuccess": "Great Success",
   "CondNotReady": "Not Ready",
