--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -2,7 +2,7 @@
   "EZ Exped": "易及遠征",
   "Auto": "自動",
   "AutoTooltip": "根據遊戲內動作自動切換艦隊",
-
+  "CustomRecommendSparkledCount": "定製提高大成功所需的處於“戰意高昂”狀態的艦娘數量",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常規檢查",
