--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -3,6 +3,7 @@
   "Auto": "自动",
   "AutoTooltip": "根据游戏内动作自动切换舰队",
   "CustomRecommendSparkledCount": "定制提高大成功所需的处于“战意高昂”状态的舰娘数量",
+  "AllowPluginAutoSwitch": "允许自动切换到本插件",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常规检查",
