--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -3,6 +3,7 @@
   "Auto": "自動",
   "AutoTooltip": "根據遊戲內動作自動切換艦隊",
   "CustomRecommendSparkledCount": "定製提高大成功所需的處於“戰意高昂”狀態的艦娘數量",
+  "AllowPluginAutoSwitch": "允許自動切換到本插件",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常規檢查",
