impl "AllSparkled" requirement type
for non-overdrum expeditions, it's actually a requirement
for all ships in that fleet to be sparkled in order to have a chance
of great success

--- a/assets/i18n/en-US.json
+++ b/assets/i18n/en-US.json
@@ -41,6 +41,7 @@
     "SparkledCount": "≥%s sparkled ship(s) for a great success rate boost",
     "RecommendSparkledCount": "≥%s sparkled ship(s) for a better great success rate",
     "Morale": "All ships in this fleet should have morale ≥%s",
-    "Resupply": "All ships in this fleet should be fully resupplied"
+    "Resupply": "All ships in this fleet should be fully resupplied",
+    "AllSparkled": "All ships need to be sparkled"
   }
 }
