--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -43,7 +43,8 @@
     "SparkledCount": "携带至少%s名处于“战意高昂”状态的舰娘可极大提高大成功概率",
     "RecommendSparkledCount": "推荐携带至少%s名“战意高昂”状态的舰娘以提高大成功概率",
     "Morale": "舰娘疲劳度至少为%s",
-    "Resupply": "舰队补给"
+    "Resupply": "舰队补给",
+    "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态"
   },
   "Expedition made easy": "远征条件检查与精确收入预测",
   "Required Time (mins)": "所需时间(分钟)",
