--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -4,6 +4,7 @@
   "AutoTooltip": "Switching between fleets automatically depending on your in-game actions.",
   "CustomRecommendSparkledCount": "Custom the number of sparkled ships for a better Great Success rate",
   "AllowPluginAutoSwitch": "Allow switching to this plugin automatically",
+  "HideMainFleet": "Hide main fleet",
   "CondNormal": "Normal",
   "CondGreatSuccess": "Great Success",
   "CondNotReady": "Not Ready",
