--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -5,6 +5,7 @@
   "CustomRecommendSparkledCount": "Custom the number of sparkled ships for a better Great Success rate",
   "AllowPluginAutoSwitch": "Allow switching to this plugin automatically",
   "HideMainFleet": "Hide main fleet",
+  "HideSatRequirements": "Hide satisfied requirements",
   "CondNormal": "Normal",
   "CondGreatSuccess": "Great Success",
   "CondNotReady": "Not Ready",
