address few TODOs, remove dups

--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -5,7 +5,7 @@
   "CustomRecommendSparkledCount": "定制提高大成功所需的处于“战意高昂”状态的舰娘数量",
   "AllowPluginAutoSwitch": "允许自动切换到本插件",
   "HideMainFleet": "隐藏主舰队",
-  "HideSatRequirements": "隐藏已满足的条件",
+  "HideSatReqs": "隐藏已满足的条件",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常规检查",
