--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -5,7 +5,7 @@
   "CustomRecommendSparkledCount": "定製提高大成功所需的處於“戰意高昂”狀態的艦娘數量",
   "AllowPluginAutoSwitch": "允許自動切換到本插件",
   "HideMainFleet": "隱藏主艦隊",
-  "HideSatRequirements": "隱藏已滿足的條件",
+  "HideSatReqs": "隱藏已滿足的條件",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常規檢查",
