--- a/assets/i18n/ko-KR.json
+++ b/assets/i18n/ko-KR.json
@@ -40,7 +40,7 @@
     "DrumCount": "Fleet carries ≥%s \"ドラム缶(輸送用)\" in total",
     "LevelSum": "Total level of this fleet should be at least %s",
     "SparkledCount": "≥%s sparkled ship(s) for a great success rate boost",
-    "RecommendSparkledCount": "≥%s sparkled ship(s) for a better great success rate",
+    "SparkledCountCustom": "≥%s sparkled ship(s) for a better great success rate",
     "Morale": "All ships in this fleet should have morale ≥%s",
     "Resupply": "All ships in this fleet should be fully resupplied",
     "AllSparkled": "All ships need to be sparkled"
