--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -42,7 +42,7 @@
     "DrumCount": "艦隊攜帶的“ドラム缶(輸送用)”總量至少爲%s",
     "LevelSum": "艦娘等級合計至少爲%s",
     "SparkledCount": "攜帶至少%s名處於“戰意高昂”狀態的艦娘可極大提高大成功概率",
-    "RecommendSparkledCount": "推薦攜帶至少%s名“戰意高昂”狀態的艦娘以提高大成功概率",
+    "SparkledCountCustom": "推薦攜帶至少%s名“戰意高昂”狀態的艦娘以提高大成功概率",
     "Morale": "艦娘疲勞度至少爲%s",
     "Resupply": "艦隊補給",
     "AllSparkled": "艦隊全體艦娘都需處於“戰意高昂”狀態"
