--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -20,7 +20,9 @@
     "BBV": "航空战舰 (BBV)",
     "AS": "潜水母舰 (AS)",
     "CT": "练习巡洋舰 (CT)",
-    "AV": "水上机母舰 (AV)"
+    "AV": "水上机母舰 (AV)",
+    "DE": "海防舰 (DE)",
+    "CVE": "护卫空母 (CVE)"
   },
   "RequiredTime": {
     "hour": "%s 小时",
