--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -20,7 +20,9 @@
     "BBV": "航空戰艦 (BBV)",
     "AS": "潛水母艦 (AS)",
     "CT": "練習巡洋艦 (CT)",
-    "AV": "水上機母艦 (AV)"
+    "AV": "水上機母艦 (AV)",
+    "DE": "海防艦 (DE)",
+    "CVE": "護衛空母 (CVE)"
   },
   "RequiredTime": {
     "hour": "%s 小時",
