--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -2,7 +2,7 @@
   "EZ Exped": "イージー遠征",
   "Auto": "Auto",
   "AutoTooltip": "Switching between fleets automatically depending on your in-game actions.",
-  "CustomRecommendSparkledCount": "Custom the number of sparkled ships for a better Great Success rate",
+  "SparkledCountCustomDesc": "Custom the number of sparkled ships for a better Great Success rate",
   "HideMainFleet": "Hide main fleet",
   "HideSatReqs": "Hide satisfied requirements",
   "CondNormal": "Normal",
