--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -2,7 +2,8 @@
   "EZ Exped": "易及远征",
   "Auto": "自动",
   "AutoTooltip": "根据游戏内动作自动切换舰队",
-  "CustomRecommendSparkledCount": "定制提高大成功所需的处于“战意高昂”状态的舰娘数量",
+  "SparkledCountCustom": "“战意高昂”舰数量",
+  "SparkledCountCustomDesc": "定制提高大成功率所需的处于“战意高昂”状态的舰娘数量",
   "HideMainFleet": "隐藏主舰队",
   "HideSatReqs": "隐藏已满足的条件",
   "Cost": "消耗",
@@ -44,10 +45,27 @@
     "DrumCount": "舰队携带的“ドラム缶(輸送用)”总量至少为%s",
     "LevelSum": "舰娘等级合计至少为%s",
     "SparkledCount": "携带至少%s名处于“战意高昂”状态的舰娘可极大提高大成功概率",
-    "SparkledCountCustom": "推荐携带至少%s名“战意高昂”状态的舰娘以提高大成功概率",
+    "SparkledCountCustom": "推荐携带至少%s名处于“战意高昂”状态的舰娘以提高大成功概率",
     "Morale": "舰娘疲劳度至少为%s",
     "Resupply": "舰队补给",
-    "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态"
+    "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态",
+    "TTNoFlagship": "无旗舰",
+    "TTNeedsMoreShips": "还需%s名舰娘",
+    "TTNeedsMoreDrumCarriers": "还需携带了“ドラム缶(輸送用)”的舰娘%s名",
+    "TTNeedsMoreDrums": "舰队还需携带%s枚“ドラム缶(輸送用)”",
+    "TTCurrentTotalLevel": "当前等级和: %s",
+    "TTNeedsMoreSparkledShips": "还需%s名处于“战意高昂”状态的舰娘",
+    "TTLowMorale": "低士气:",
+    "TTResupply": "未补给:",
+    "TTNotSparkled": "未处于“战意高昂”状态:"
+  },
+  "FleetState": {
+    "MainShouldHide": "将被隐藏",
+    "NotAvail": "无效舰队",
+    "OnExped": "正在执行远征 #%s",
+    "Ready": "远征#%s 准备就绪",
+    "NeedResupply": "远征#%s 需要补给",
+    "Unmet": "远征#%s 条件未满足"
   },
   "Expedition made easy": "远征条件检查与精确收入预测",
   "Required Time (mins)": "所需时间(分钟)",
