--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -2,7 +2,8 @@
   "EZ Exped": "易及遠征",
   "Auto": "自動",
   "AutoTooltip": "根據遊戲內動作自動切換艦隊",
-  "CustomRecommendSparkledCount": "定製提高大成功所需的處於“戰意高昂”狀態的艦娘數量",
+  "SparkledCountCustom": "“戰意高昂”艦數量",
+  "SparkledCountCustomDesc": "定製提高大成功率所需的處於“戰意高昂”狀態的艦娘數量",
   "HideMainFleet": "隱藏主艦隊",
   "HideSatReqs": "隱藏已滿足的條件",
   "Cost": "消耗",
@@ -44,10 +45,27 @@
     "DrumCount": "艦隊攜帶的“ドラム缶(輸送用)”總量至少爲%s",
     "LevelSum": "艦娘等級合計至少爲%s",
     "SparkledCount": "攜帶至少%s名處於“戰意高昂”狀態的艦娘可極大提高大成功概率",
-    "SparkledCountCustom": "推薦攜帶至少%s名“戰意高昂”狀態的艦娘以提高大成功概率",
+    "SparkledCountCustom": "推薦攜帶至少%s名處於“戰意高昂”狀態的艦娘以提高大成功概率",
     "Morale": "艦娘疲勞度至少爲%s",
     "Resupply": "艦隊補給",
-    "AllSparkled": "艦隊全體艦娘都需處於“戰意高昂”狀態"
+    "AllSparkled": "艦隊全體艦娘都需處於“戰意高昂”狀態",
+    "TTNoFlagship": "無旗艦",
+    "TTNeedsMoreShips": "還需%s名艦娘",
+    "TTNeedsMoreDrumCarriers": "還需攜帶了“ドラム缶(輸送用)”的艦娘%s名",
+    "TTNeedsMoreDrums": "艦隊還需攜帶%s枚“ドラム缶(輸送用)”",
+    "TTCurrentTotalLevel": "當前等級和: %s",
+    "TTNeedsMoreSparkledShips": "還需%s名處於“戰意高昂”狀態的艦娘",
+    "TTLowMorale": "低士氣:",
+    "TTResupply": "未補給:",
+    "TTNotSparkled": "未處於“戰意高昂”狀態:"
+  },
+  "FleetState": {
+    "MainShouldHide": "將被隱藏",
+    "NotAvail": "無效艦隊",
+    "OnExped": "正在執行遠征 #%s",
+    "Ready": "遠征#%s 準備就緒",
+    "NeedResupply": "遠征#%s 需要補給",
+    "Unmet": "遠征#%s 條件未滿足"
   },
   "Expedition made easy": "遠征條件檢查與精確收入預測",
   "Required Time (mins)": "所需時間(分鐘)",
