i18n done, ready to land

--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -6,6 +6,7 @@
   "SparkledCountCustomDesc": "定制提高大成功率所需的处于“战意高昂”状态的舰娘数量",
   "HideMainFleet": "隐藏主舰队",
   "HideSatReqs": "隐藏已满足的条件",
+  "SyncMainFleetId": "与主面板同步切换舰队",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常规检查",
