--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -6,6 +6,7 @@
   "SparkledCountCustomDesc": "Custom the number of sparkled ships for a better Great Success rate",
   "HideMainFleet": "Hide main fleet",
   "HideSatReqs": "Hide satisfied requirements",
+  "SyncMainFleetId": "Sync with main fleet focus",
   "Cost": "Cost",
   "Great Success": "Great Success",
   "CondNormal": "Normal",
