--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -6,6 +6,7 @@
   "SparkledCountCustomDesc": "定製提高大成功率所需的處於“戰意高昂”狀態的艦娘數量",
   "HideMainFleet": "隱藏主艦隊",
   "HideSatReqs": "隱藏已滿足的條件",
+  "SyncMainFleetId": "與主面板同步切換艦隊",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常規檢查",
