--- a/assets/i18n/ko-KR.json
+++ b/assets/i18n/ko-KR.json
@@ -68,6 +68,10 @@
     "NeedResupply": "Need Resupply for Expedition #%s",
     "Unmet": "Requirement Unmet for Expedition #%s"
   },
+  "Kancepts": {
+    "Launch": "Launch Kancepts...",
+    "ExportShipList": "Export ship list"
+  },
   "Expedition made easy": "Expedition made easy",
   "Required Time (mins)": "Required Time (mins)",
   "Fleet Composition": "Fleet Composition"
