Add Japanese translation

--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -1,78 +1,78 @@
 {
   "EZ Exped": "イージー遠征",
-  "Auto": "Auto",
-  "AutoTooltip": "Switching between fleets automatically depending on your in-game actions.",
-  "SparkledCountCustom": "Number of sparkled ships",
-  "SparkledCountCustomDesc": "Custom the number of sparkled ships for a better Great Success rate",
-  "HideMainFleet": "Hide main fleet",
-  "HideSatReqs": "Hide satisfied requirements",
-  "SyncMainFleetId": "Sync with main fleet focus",
-  "Cost": "Cost",
-  "Great Success": "Great Success",
-  "CondNormal": "Normal",
-  "CondGreatSuccess": "Great Success",
-  "CondNotReady": "Not Ready",
-  "CondReady": "Ready",
+  "Auto": "自動",
+  "AutoTooltip": "アクティブ艦隊はゲーム内のアクションに従う",
+  "SparkledCountCustom": "キラキラ艦の数",
+  "SparkledCountCustomDesc": "大成功するために必要なキラキラ艦の数を設定する",
+  "HideMainFleet": "第一艦隊を隠す",
+  "HideSatReqs": "満足した条件を隠す",
+  "SyncMainFleetId": "アクティブ艦隊は艦隊パネルに従う",
+  "Cost": "コスト",
+  "Great Success": "大成功",
+  "CondNormal": "普通",
+  "CondGreatSuccess": "大成功",
+  "CondNotReady": "準備未完了",
+  "CondReady": "準備完了",
   "ShipTypeNameLong": {
-    "DD": "Destroyer (DD)",
-    "CL": "Light Cruiser (CL)",
-    "CVLike": "Aircraft Carriers (CV/CVL/AV/CVB)",
-    "SSLike": "Submarines (SS/SSV)",
-    "CA": "Heavy Cruiser (CA)",
-    "BBV": "Aviation Battleship (BBV)",
-    "AS": "Submarine Tender (AS)",
-    "CT": "Training Cruiser (CT)",
-    "AV": "Seaplane Tender (AV)",
-    "DE": "Escort (DE)",
-    "CVE": "Escort Carrier (CVE)"
+    "DD": "駆逐艦 (DD)",
+    "CL": "軽巡洋艦 (CL)",
+    "CVLike": "空母 (CV/CVL/AV/CVB)",
+    "SSLike": "潜水艦 (SS/SSV)",
+    "CA": "重巡洋艦 (CA)",
+    "BBV": "航空戦艦 (BBV)",
+    "AS": "潜水母艦 (AS)",
+    "CT": "練習巡洋艦 (CT)",
+    "AV": "水上機母艦 (AV)",
+    "DE": "海防艦 (DE)",
+    "CVE": "護衛空母 (CVE)"
   },
   "RequiredTime": {
-    "hour": "%s hr",
-    "minute": "%s min"
+    "hour": "%s 時間",
+    "minute": "%s 分"
   },
   "IncomeExplain": {
-    "basicIncome": "Basic Income",
-    "aveImp": "Daihatsu-class Ave. Improvement",
-    "dhtBonus": "Daihatsu-class Bonus",
-    "tokuBonus": "Toku Daihatsu Bonus",
-    "totalIncome": "Total Income",
-    "netIncome": "Net Income"
+    "basicIncome": "基本的な収入",
+    "aveImp": "大発系の☆の平均値",
+    "dhtBonus": "大発系の素補正",
+    "tokuBonus": "特大発補正",
+    "totalIncome": "総収入",
+    "netIncome": "純収入"
   },
   "RequirementExplain": {
-    "FSType": "Flagship type: %s",
-    "FSLevel": "Flagship level ≥%s",
-    "ShipCount": "Fleet contains ≥%s ship(s)",
-    "DrumCarrierCount": "≥%s ship(s) should carry \"ドラム缶(輸送用)\"",
-    "DrumCount": "Fleet carries ≥%s \"ドラム缶(輸送用)\" in total",
-    "LevelSum": "Total level of this fleet should be at least %s",
-    "SparkledCount": "≥%s sparkled ship(s) for a great success rate boost",
-    "SparkledCountCustom": "≥%s sparkled ship(s) for a better great success rate",
-    "Morale": "All ships in this fleet should have morale ≥%s",
-    "Resupply": "All ships in this fleet should be fully resupplied",
-    "AllSparkled": "All ships need to be sparkled",
-    "TTNoFlagship": "No Flagship",
-    "TTNeedsMoreShips": "Needs %s more ships",
-    "TTNeedsMoreDrumCarriers": "Needs %s more ships to carry \"ドラム缶(輸送用)\"",
-    "TTNeedsMoreDrums": "Needs to carry %s more \"ドラム缶(輸送用)\"",
-    "TTCurrentTotalLevel": "Current Total Level: %s",
-    "TTNeedsMoreSparkledShips": "Needs %s more sparkled ship(s)",
-    "TTLowMorale": "Low morale:",
-    "TTResupply": "Not resupplied:",
-    "TTNotSparkled": "Not Sparkled:"
+    "FSType": "旗艦艦種: %s",
+    "FSLevel": "旗艦レベル ≥%s",
+    "ShipCount": "編成隻数 ≥%s",
+    "DrumCarrierCount": "\"ドラム缶(輸送用)\" 装備艦の数 ≥%s",
+    "DrumCount": "\"ドラム缶(輸送用)\" の数 ≥%s",
+    "LevelSum": "艦隊合計レベル %s",
+    "SparkledCount": "大成功するため、キラキラ艦の数 ≥%s",
+    "SparkledCountCustom": "大成功するため、キラキラ艦の数 ≥%s",
+    "Morale": "各艦の疲労度 ≥%s",
+    "Resupply": "各艦とも補給済み",
+    "AllSparkled": "各艦ともキラキラ",
+    "TTNoFlagship": "旗艦がありません",
+    "TTNeedsMoreShips": "まだ艦娘 %s 隻が必要です",
+    "TTNeedsMoreDrumCarriers": "まだ\"ドラム缶(輸送用)\" 装備艦 %s 艦隻が必要です",
+    "TTNeedsMoreDrums": "まだ\"ドラム缶(輸送用)\" %s つが必要です",
+    "TTCurrentTotalLevel": "現在の艦隊合計レベル: %s",
+    "TTNeedsMoreSparkledShips": "まだキラキラ艦 %s 隻が必要です",
+    "TTLowMorale": "疲労状態:",
+    "TTResupply": "未補給:",
+    "TTNotSparkled": "未キラ付け:"
   },
   "FleetState": {
-    "MainShouldHide": "Will be hidden",
-    "NotAvail": "Not Available",
-    "OnExped": "On Expedition #%s",
-    "Ready": "Ready for Expedition #%s",
-    "NeedResupply": "Need Resupply for Expedition #%s",
-    "Unmet": "Requirement Unmet for Expedition #%s"
+    "MainShouldHide": "非表示になります",
+    "NotAvail": "利用不可",
+    "OnExped": "遠征中 #%s",
+    "Ready": "遠征 #%s 準備完了",
+    "NeedResupply": "遠征 #%s の補給が必要",
+    "Unmet": "遠征 #%s の条件を満足しない"
   },
   "Kancepts": {
-    "Launch": "Launch Kancepts...",
-    "ExportShipList": "Export ship list"
+    "Launch": "起動中...",
+    "ExportShipList": "艦隊リストをエキスパート"
   },
   "Expedition made easy": "遠征報酬早見表",
-  "Required Time (mins)": "Required Time (mins)",
-  "Fleet Composition": "Fleet Composition"
+  "Required Time (mins)": "必要時間 (分)",
+  "Fleet Composition": "艦隊編成"
 }
