--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -52,7 +52,7 @@
     "AllSparkled": "各艦ともキラキラ",
     "TTNoFlagship": "旗艦がありません",
     "TTNeedsMoreShips": "まだ艦娘 %s 隻が必要です",
-    "TTNeedsMoreDrumCarriers": "まだ\"ドラム缶(輸送用)\" 装備艦 %s 艦隻が必要です",
+    "TTNeedsMoreDrumCarriers": "まだ\"ドラム缶(輸送用)\" 装備艦 %s 隻が必要です",
     "TTNeedsMoreDrums": "まだ\"ドラム缶(輸送用)\" %s つが必要です",
     "TTCurrentTotalLevel": "現在の艦隊合計レベル: %s",
     "TTNeedsMoreSparkledShips": "まだキラキラ艦 %s 隻が必要です",
