--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -69,7 +69,7 @@
     "Unmet": "遠征 #%s の条件を満足しない"
   },
   "Kancepts": {
-    "Launch": "起動中...",
+    "Launch": "kancepts を起動",
     "ExportShipList": "艦隊リストをエキスパート"
   },
   "Expedition made easy": "遠征報酬早見表",
