--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -38,6 +38,7 @@
     "totalIncome": "総収入",
     "netIncome": "純収入"
   },
+  "TTFillDlcExplain": "Require fleet to carry as many \"大発動艇\" or \"特大発動艇\" as possible",
   "RequirementExplain": {
     "FSType": "旗艦艦種: %s",
     "FSLevel": "旗艦レベル ≥%s",
@@ -58,7 +59,8 @@
     "TTNeedsMoreSparkledShips": "まだキラキラ艦 %s 隻が必要です",
     "TTLowMorale": "疲労状態:",
     "TTResupply": "未補給:",
-    "TTNotSparkled": "未キラ付け:"
+    "TTNotSparkled": "未キラ付け:",
+    "TTShipCanCarryMoreDlc": "%s can carry %s more Daihatsu-class equipment(s)"
   },
   "FleetState": {
     "MainShouldHide": "非表示になります",
