improvement & missed translation

--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -51,6 +51,7 @@
     "Morale": "各艦の疲労度 ≥%s",
     "Resupply": "各艦とも補給済み",
     "AllSparkled": "各艦ともキラキラ",
+    "FillDlc": "Carry as many \"大発動艇\" or \"特大発動艇\" as possible",
     "TTNoFlagship": "旗艦がありません",
     "TTNeedsMoreShips": "まだ艦娘 %s 隻が必要です",
     "TTNeedsMoreDrumCarriers": "まだ\"ドラム缶(輸送用)\" 装備艦 %s 隻が必要です",
