--- a/assets/i18n/ko-KR.json
+++ b/assets/i18n/ko-KR.json
@@ -51,6 +51,7 @@
     "Morale": "All ships in this fleet should have morale ≥%s",
     "Resupply": "All ships in this fleet should be fully resupplied",
     "AllSparkled": "All ships need to be sparkled",
+    "FillDlc": "Carry as many \"大発動艇\" or \"特大発動艇\" as possible",
     "TTNoFlagship": "No Flagship",
     "TTNeedsMoreShips": "Needs %s more ships",
     "TTNeedsMoreDrumCarriers": "Needs %s more ships to carry \"ドラム缶(輸送用)\"",
