--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -53,6 +53,8 @@
     "Resupply": "舰队补给",
     "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态",
     "FillDlc": "携带尽可能多的“大発動艇”或“特大発動艇”",
+    "TotalAsw": "舰队对潜值之和 ≥%s",
+    "MissingInfo": "信息不全",
     "TTNoFlagship": "无旗舰",
     "TTNeedsMoreShips": "还需%s名舰娘",
     "TTNeedsMoreDrumCarriers": "还需携带了“ドラム缶(輸送用)”的舰娘%s名",
@@ -62,7 +64,9 @@
     "TTLowMorale": "低士气:",
     "TTResupply": "未补给:",
     "TTNotSparkled": "未处于“战意高昂”状态:",
-    "TTShipCanCarryMoreDlc": "%s 还可携带最多%s枚大发系装备"
+    "TTShipCanCarryMoreDlc": "%s 还可携带最多%s枚大发系装备",
+    "TTTotalAsw": "当前值: %s, 需要: %s",
+    "TTMissingInfo": "当前信息不足,无法进行完整的远征检查"
   },
   "FleetState": {
     "MainShouldHide": "将被隐藏",
