--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -54,7 +54,7 @@
     "AllSparkled": "艦隊全體艦娘都需處於“戰意高昂”狀態",
     "FillDlc": "攜帶儘可能多的“大発動艇”或“特大発動艇”",
     "TotalAsw": "艦隊對潛值之和 ≥%s",
-    "MissingInfo": "信息不全",
+    "MissingInfo": "信息不足",
     "TTNoFlagship": "無旗艦",
     "TTNeedsMoreShips": "還需%s名艦娘",
     "TTNeedsMoreDrumCarriers": "還需攜帶了“ドラム缶(輸送用)”的艦娘%s名",
