--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -54,7 +54,7 @@
     "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态",
     "FillDlc": "携带尽可能多的“大発動艇”或“特大発動艇”",
     "TotalAsw": "舰队对潜值之和 ≥%s",
-    "MissingInfo": "信息不全",
+    "MissingInfo": "信息不足",
     "TTNoFlagship": "无旗舰",
     "TTNeedsMoreShips": "还需%s名舰娘",
     "TTNeedsMoreDrumCarriers": "还需携带了“ドラム缶(輸送用)”的舰娘%s名",
