--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -54,6 +54,7 @@
     "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态",
     "FillDlc": "携带尽可能多的“大発動艇”或“特大発動艇”",
     "TotalAsw": "舰队对潜值之和 ≥%s",
+    "TotalAntiAir": "舰队对空值之和 ≥%s",
     "MissingInfo": "信息不足",
     "TTNoFlagship": "无旗舰",
     "TTNeedsMoreShips": "还需%s名舰娘",
@@ -66,6 +67,7 @@
     "TTNotSparkled": "未处于“战意高昂”状态:",
     "TTShipCanCarryMoreDlc": "%s 还可携带最多%s枚大发系装备",
     "TTTotalAsw": "当前值: %s, 需要: %s",
+    "TTTotalAntiAir": "当前值: %s, 需要: %s",
     "TTMissingInfo": "当前信息不足,无法进行完整的远征检查"
   },
   "FleetState": {
