--- a/assets/i18n/en-US.json
+++ b/assets/i18n/en-US.json
@@ -55,6 +55,7 @@
     "FillDlc": "Carry as many \"大発動艇\" or \"特大発動艇\" as possible",
     "TotalAsw": "Total ASW stats ≥%s",
     "TotalAntiAir": "Total anti-air stats ≥%s",
+    "TotalLos": "Total LoS stats ≥%s",
     "MissingInfo": "Missing Information",
     "TTNoFlagship": "No Flagship",
     "TTNeedsMoreShips": "Needs %s more ships",
@@ -68,6 +69,7 @@
     "TTShipCanCarryMoreDlc": "%s can carry %s more Daihatsu-class equipment(s)",
     "TTTotalAsw": "Current %s, Need: %s",
     "TTTotalAntiAir": "Current %s, Need: %s",
+    "TTTotalLos": "Current %s, Need: %s",
     "TTMissingInfo": "A complete check for this expedition is not available yet."
   },
   "FleetState": {
