--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -54,7 +54,8 @@
     "AllSparkled": "各艦ともキラキラ",
     "FillDlc": "できる限り \"大発動艇\" や \"特大発動艇\" を搭載する",
     "TotalAsw": "Total ASW stats ≥%s",
-    "TotalAsw": "Total anti-air stats ≥%s",
+    "TotalAntiAir": "Total anti-air stats ≥%s",
+    "TotalLos": "Total LoS stats ≥%s",
     "MissingInfo": "Missing Information",
     "TTNoFlagship": "旗艦がありません",
     "TTNeedsMoreShips": "まだ艦娘 %s 隻が必要です",
@@ -68,6 +69,7 @@
     "TTShipCanCarryMoreDlc": "%s は %s もっと多くの大発動艇を搭載することが可能です",
     "TTTotalAsw": "Current %s, Need: %s",
     "TTTotalAntiAir": "Current %s, Need: %s",
+    "TTTotalLos": "Current %s, Need: %s",
     "TTMissingInfo": "A complete check for this expedition is not available yet."
   },
   "FleetState": {
