--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -53,9 +53,9 @@
     "Resupply": "舰队补给",
     "AllSparkled": "舰队全体舰娘都需处于“战意高昂”状态",
     "FillDlc": "携带尽可能多的“大発動艇”或“特大発動艇”",
-    "TotalAsw": "舰队对潜值之和 ≥%s",
-    "TotalAntiAir": "舰队对空值之和 ≥%s",
-    "TotalLos": "舰队索敌值之和 ≥%s",
+    "TotalAsw": "舰队总对潜 ≥%s",
+    "TotalAntiAir": "舰队总对空 ≥%s",
+    "TotalLos": "舰队总索敌值 ≥%s",
     "MissingInfo": "信息不足",
     "TTNoFlagship": "无旗舰",
     "TTNeedsMoreShips": "还需%s名舰娘",
