--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -53,9 +53,9 @@
     "Resupply": "艦隊補給",
     "AllSparkled": "艦隊全體艦娘都需處於“戰意高昂”狀態",
     "FillDlc": "攜帶儘可能多的“大発動艇”或“特大発動艇”",
-    "TotalAsw": "艦隊對潛值之和 ≥%s",
-    "TotalAntiAir": "艦隊對空值之和 ≥%s",
-    "TotalLos": "艦隊索敵值之和 ≥%s",
+    "TotalAsw": "艦隊總對潛 ≥%s",
+    "TotalAntiAir": "艦隊總對空 ≥%s",
+    "TotalLos": "艦隊總索敵值 ≥%s",
     "MissingInfo": "信息不足",
     "TTNoFlagship": "無旗艦",
     "TTNeedsMoreShips": "還需%s名艦娘",
