--- a/assets/i18n/en-US.json
+++ b/assets/i18n/en-US.json
@@ -1,12 +1,13 @@
 {
   "EZ Exped": "EZ Exped",
   "Auto": "Auto",
-  "AutoTooltip": "Switching between fleets automatically depending on your in-game actions.",
   "SparkledCountCustom": "Number of sparkled ships",
   "SparkledCountCustomDesc": "Custom the number of sparkled ships for a better Great Success rate",
   "HideMainFleet": "Hide main fleet",
   "HideSatReqs": "Hide satisfied requirements",
   "SyncMainFleetId": "Sync with main fleet focus",
+  "FleetAutoSwitch": "Auto-switch between fleets",
+  "FleetAutoSwitchDesc": "Switching between fleets automatically depending on your in-game actions.",
   "Cost": "Cost",
   "Great Success": "Great Success",
   "CondNormal": "Normal",
