--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -1,12 +1,13 @@
 {
   "EZ Exped": "イージー遠征",
   "Auto": "自動",
-  "AutoTooltip": "アクティブ艦隊はゲーム内のアクションに従う",
   "SparkledCountCustom": "キラキラ艦の数",
   "SparkledCountCustomDesc": "大成功するために必要なキラキラ艦の数を設定する",
   "HideMainFleet": "第一艦隊を隠す",
   "HideSatReqs": "満足した条件を隠す",
   "SyncMainFleetId": "アクティブ艦隊は艦隊パネルに従う",
+  "FleetAutoSwitch": "Switching between fleets automatically depending on your in-game actions.",
+  "FleetAutoSwitchDesc": "アクティブ艦隊はゲーム内のアクションに従う",
   "Cost": "コスト",
   "Great Success": "大成功",
   "CondNormal": "普通",
