--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -1,12 +1,13 @@
 {
   "EZ Exped": "易及远征",
   "Auto": "自动",
-  "AutoTooltip": "根据游戏内动作自动切换舰队",
   "SparkledCountCustom": "“战意高昂”舰数量",
   "SparkledCountCustomDesc": "定制提高大成功率所需的处于“战意高昂”状态的舰娘数量",
   "HideMainFleet": "隐藏主舰队",
   "HideSatReqs": "隐藏已满足的条件",
   "SyncMainFleetId": "与主面板同步切换舰队",
+  "FleetAutoSwitch": "在舰队间自动切换",
+  "FleetAutoSwitchDesc": "根据游戏内动作自动切换舰队",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常规检查",
