--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -1,12 +1,13 @@
 {
   "EZ Exped": "易及遠征",
   "Auto": "自動",
-  "AutoTooltip": "根據遊戲內動作自動切換艦隊",
   "SparkledCountCustom": "“戰意高昂”艦數量",
   "SparkledCountCustomDesc": "定製提高大成功率所需的處於“戰意高昂”狀態的艦娘數量",
   "HideMainFleet": "隱藏主艦隊",
   "HideSatReqs": "隱藏已滿足的條件",
   "SyncMainFleetId": "與主面板同步切換艦隊",
+  "FleetAutoSwitch": "在艦隊間自動切換",
+  "FleetAutoSwitchDesc": "根據遊戲內動作自動切換艦隊",
   "Cost": "消耗",
   "Great Success": "大成功",
   "CondNormal": "常規檢查",
