--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -40,6 +40,7 @@
     "totalIncome": "総収入",
     "netIncome": "純収入"
   },
+  "TTGreatSucessOnlyItem": "This item is only awarded for Great Success.",
   "TTFillDlcExplain": "できる限り \"大発動艇\" や \"特大発動艇\" を搭載することを必要とする",
   "RequirementExplain": {
     "FSType": "旗艦艦種: %s",
