--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -5,7 +5,7 @@
   "HideMainFleet": "第一艦隊を隠す",
   "HideSatReqs": "満足した条件を隠す",
   "SyncMainFleetId": "アクティブ艦隊は艦隊パネルに従う",
-  "FleetAutoSwitch": "Switching between fleets automatically depending on your in-game actions.",
+  "FleetAutoSwitch": "ゲーム内のアクションによってバネルを切り換える",
   "FleetAutoSwitchDesc": "アクティブ艦隊はゲーム内のアクションに従う",
   "Great Success": "大成功",
   "CondNormal": "普通",
@@ -38,7 +38,7 @@
     "totalIncome": "総収入",
     "netIncome": "純収入"
   },
-  "TTGreatSucessOnlyItem": "This item is only awarded for Great Success.",
+  "TTGreatSucessOnlyItem": "このアイテムは、遠征が大成功したときのみ入手することが可能です。",
   "TTFillDlcExplain": "できる限り \"大発動艇\" や \"特大発動艇\" を搭載することを必要とする",
   "RequirementExplain": {
     "FSType": "旗艦艦種: %s",
@@ -53,11 +53,11 @@
     "Resupply": "各艦とも補給済み",
     "AllSparkled": "各艦ともキラキラ",
     "FillDlc": "できる限り \"大発動艇\" や \"特大発動艇\" を搭載する",
-    "TotalAsw": "Total ASW stats ≥%s",
-    "TotalAntiAir": "Total anti-air stats ≥%s",
-    "TotalLos": "Total LoS stats ≥%s",
-    "TotalFirepower": "Total Firepower stats ≥%s",
-    "MissingInfo": "Missing Information",
+    "TotalAsw": "総対潜値 ≥%s",
+    "TotalAntiAir": "総対空値 ≥%s",
+    "TotalLos": "総索敵値 ≥%s",
+    "TotalFirepower": "総火力値 ≥%s",
+    "MissingInfo": "不明情報",
     "TTNoFlagship": "旗艦がありません",
     "TTNeedsMoreShips": "まだ艦娘 %s 隻が必要です",
     "TTNeedsMoreDrumCarriers": "まだ\"ドラム缶(輸送用)\" 装備艦 %s 隻が必要です",
@@ -68,11 +68,11 @@
     "TTResupply": "未補給:",
     "TTNotSparkled": "未キラ付け:",
     "TTShipCanCarryMoreDlc": "%s は %s もっと多くの大発動艇を搭載することが可能です",
-    "TTTotalAsw": "Current: %s, Needed: %s",
-    "TTTotalAntiAir": "Current: %s, Needed: %s",
-    "TTTotalLos": "Current: %s, Needed: %s",
-    "TTTotalFirepower": "Current: %s, Needed: %s",
-    "TTMissingInfo": "A complete check for this expedition is not available yet."
+    "TTTotalAsw": "現在: %s, 必要: %s",
+    "TTTotalAntiAir": "現在: %s, 必要: %s",
+    "TTTotalLos": "現在: %s, 必要: %s",
+    "TTTotalFirepower": "現在: %s, 必要: %s",
+    "TTMissingInfo": "この遠征の条件は、現時点では不明です"
   },
   "FleetState": {
     "MainShouldHide": "非表示になります",
